# penumbra-technical-spec

./: PENUMBRA_TECHNICAL_SPECIFICATION.md
espn/: .gitignore  README.md  deploy_modal.py
espn/espn_provider/: README.md  pyproject.toml
espn/espn_provider/espn_provider/: __init__.py  har_extractor.py  models.py  openapi.yaml  provider.py  provider.yaml  router.py
espn/espn_provider/tests/: contract_test.py
sephora/: .gitignore  API_DOCUMENTATION.md  OPENAPI_REQUIREMENTS.md  README.md  UAPI_COMPLIANCE_CHECKLIST.md  [EXTERNAL]_PROVIDER_SPEC.md  deploy_modal.sh  generate_validation.py  har_preview.py  home_content_real.json  live_api_client.py  load_real_data.py  modal_app.py  modal_app_live.py  openapi.yaml  product_search_real.json  requirements.txt  test_checkout_flow.py  test_precheck_flow.py  test_with_curl.sh  validate_compliance.py
sephora/app/: main.py
sephora/tests/: __init__.py  test_golden_paths.py
